--- a/todo.org
+++ b/todo.org
@@ -1,5 +1,5 @@
 * Necessary
-** TODO Health pickups
+** DONE Health pickups
 ** TODO One more enemy type
 ** TODO One more spell type
 ** TODO Score multiplier
