--- a/todo.org
+++ b/todo.org
@@ -2,7 +2,7 @@
 ** DONE Health pickups
 ** TODO One more enemy type
 ** TODO One more spell type
-** TODO Score multiplier
+** DONE Score multiplier
 ** DONE Scoring
 ** DONE UI
 *** DONE Show health
