--- a/todo.org
+++ b/todo.org
@@ -17,16 +17,17 @@
 ** DONE Player art
 ** DONE Fix tunnel collisions
 ** DONE Fix slimes not stopping jumping when hitting wall
-** TODO Difficulty ramp
+** DONE Difficulty ramp
 ** DONE Chests to pickup spells / hearts
+** TODO Make spells drop from chests
+** DONE Another enemy type
+** TODO Another spell type
 
 * Quite nice to have
-** TODO Another enemy type
-** TODO Another spell type
 ** TODO A 'dash'?
+** TODO Powerups / upgrades
+*** TODO Bouncy fireballs?
 
 * Stretch
 ** TODO Ending?
 ** TODO Main menu
-** TODO Powerups / upgrades
-*** TODO Bouncy fireballs?
